--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    _PROJECT_NAME: "admin19-sk-delivery"
+    _PROJECT_NAME: "admin19-sk-delivery1"
 
 phases:
   install:
