--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,8 +57,8 @@ spring:
       bindings:
         event-in:
           group: delivery
-          destination: rental1
+          destination: rentals
           contentType: application/json
         event-out:
-          destination: rental1
+          destination: rentals
           contentType: application/json
